--- a/src/app/auth/otp-login/otp-login.component.html
+++ b/src/app/auth/otp-login/otp-login.component.html
@@ -1,20 +1,4 @@
-<!-- <div class="container mt-5">
-    <h2>Login with OTP</h2>
-    <form [formGroup]="form" (ngSubmit)="submit()">
-        <div class="mb-3">
-            <label>Email</label>
-            <input type="email" formControlName="email" class="form-control" placeholder="Enter your email">
-        </div>
-
-        <div class="mb-3">
-            <label>OTP Code</label>
-            <input type="text" formControlName="otp" class="form-control" placeholder="Enter OTP code">
-        </div>
-
-        <button class="btn btn-primary" [disabled]="form.invalid">Login</button>
-    </form>
-</div> -->
-
+ <app-home-header></app-home-header>
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6 col-lg-5">
