--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -124,7 +124,7 @@
       class="fa-solid fa-user"></i><small>ប្រវត្តិរូប</small></a>
   <a routerLink="/dashboard" routerLinkActive="active" class="nav-icon"><i
       class="fa-solid fa-film"></i><small>វគ្គ</small></a>
-  <a routerLink="/myLesson" class="nav-icon"><i class="fa-solid fa-bell"></i><small>មេរៀនរបស់ខ្ញុំ</small></a>
+  <a routerLink="/myLesson"  routerLinkActive="active" class="nav-icon"><i class="fa-solid fa-book fs-5"></i><small>មេរៀនរបស់ខ្ញុំ</small></a>
   <a (click)="logout()" class="nav-icon"><i class="fa-solid fa-sign-out-alt"></i><small>ចេញ</small></a>
 </nav>
 
