--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,3 +1,4 @@
+ <app-home-header></app-home-header>
 <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-5">
