--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,6 @@
 
+ <app-home-header></app-home-header>
+
 <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-5">
