--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,6 +1,8 @@
-
-<div class="container mt-5">
-  <div class="row justify-content-center">
+<div class="container-fuild header">
+ <app-home-header></app-home-header>
+</div>
+<div class="container p-5">
+  <div class="row justify-content-center p-4">
     <div class="col-md-6 col-lg-5">
       <div class="card register-card p-4">
         <div class="card-body">
@@ -17,10 +19,13 @@
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">អ៊ីមែល</label>
-              <input type="email" class="form-control" id="email" placeholder="name@example.com" [(ngModel)]="email" 
+              <input type="email" class="form-control" id="email" placeholder="example@email.com" [(ngModel)]="email" 
                         name="email" 
                         required 
-                        #emailCtrl="ngModel">
+                        #emailCtrl="ngModel"  required email>
+              <div *ngIf="emailCtrl.invalid && emailCtrl.touched" class="text-danger">
+                        សូមបញ្ចូលអ៊ីមែលដែលអ្នកប្រើប្រាស់ប្រចាំថ្ងៃ។
+                      </div>
             </div>
             <div class="mb-3">
                       <label class="form-label">ភេទ</label>
