--- a/src/app/mylesson/mylesson.component.html
+++ b/src/app/mylesson/mylesson.component.html
@@ -27,7 +27,7 @@
 
       <!-- Completed Courses -->
       <div class="row mt-4" *ngIf="!loading && completedCourses.length > 0">
-        <div class="col-12 mb-2 ps-3 fs-5 fw-bold text-success">វគ្គសិក្សាដែលទទួលបាន (Completed)</div>
+        <div class="col-12 mb-2 ps-3 fs-5 fw-bold text-success">វគ្គសិក្សាដែលអ្នកបានទិញ (Completed)</div>
         <div class="col-md-4 mb-4" *ngFor="let course of completedCourses">
           <div class="card border-0 shadow-card rounded-4 text-center p-3 h-100">
             <a [routerLink]="['/courses', course.id, 'lessons']">
